objects/PROSAgreement__MPC__c.object
<CustomObject>
    <fields>
        <fullName>PROSAgreement__Allow_Accept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Accept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Allow_Amend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Amend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Allow_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Amendment_Date_UI__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Amendment_Date__c</fullName>
        <label>AmendmentDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__MPC_Id__c</fullName>
        <label>Mass Price Change Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Requested_Time__c</fullName>
        <label>Requested Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Total_Item_Count__c</fullName>
        <label>Total Item Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__isProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__isSync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__itemCount__c</fullName>
        <label>itemCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__lastKey__c</fullName>
        <label>lastKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PROS Agreement Mass Price Change</label>
    <listViews>
        <fullName>PROSAgreement__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PROSAgreement__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PROS Mass Price Change Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Agreement Mass Price Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>